// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyNowButton /> renders with customClasses = testclass provided 1`] = `
<button
  className="button button--solid buy-now-button focusable testclass"
  onClick={[Function]}
  type="button"
>
  <FontAwesomeIcon
    border={false}
    className=""
    fixedWidth={false}
    flip={null}
    icon="cart-arrow-down"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size={null}
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
</button>
`;

exports[`<BuyNowButton /> renders without customClasses provided 1`] = `
<button
  className="button button--solid buy-now-button focusable "
  onClick={[Function]}
  type="button"
>
  <FontAwesomeIcon
    border={false}
    className=""
    fixedWidth={false}
    flip={null}
    icon="cart-arrow-down"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size={null}
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
</button>
`;
